--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -8,12 +8,23 @@
   &__wrapper {
     @extend %cover;
     height: auto;
-    padding: 4rem;
+    padding-inline: 4rem;
   }
 
   &__nav {
     display: flex;
     justify-content: space-between;
+    padding-block: 2rem;
+
+    & > * {
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .nav__right {
+      justify-content: end;
+    }
   }
 
   &__main {
